--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,11 @@ html {
 
 body {
   margin: 0;
-
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
   color: #283136;
-
   background-color: #ffffff;
 }
 
@@ -33,17 +31,13 @@ img {
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
   position: absolute;
-
   width: 1px;
   height: 1px;
   margin: -1px;
   border: 0;
   padding: 0;
-
   white-space: nowrap;
-
   -webkit-clip-path: inset(100%);
-
          clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
@@ -58,14 +52,12 @@ input[type="radio"].visually-hidden {
   width: 1200px;
 }
 
-
 /*---Кнопки---*/
 
 .button {
   display: inline-block;
   margin: 0;
   padding: 16px 40px;
-
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
   line-height: 18px;
@@ -75,11 +67,9 @@ input[type="radio"].visually-hidden {
   text-align: center;
   vertical-align: top;
   text-decoration: none;
-
   background-color: #fb565a;
   border: none;
   border-radius: 3px;
-
 }
 
 .button:hover,
@@ -89,10 +79,10 @@ input[type="radio"].visually-hidden {
 
 .button:active {
   color: rgba(255, 255, 255, 0.3);
-
   background-color: #d7373b;
   box-shadow: inset 0px 3px 0 0 rgba(0, 1, 1, 0.1);
 }
+
 /*---Кнопки---*/
 
 /*---Шапка---*/
@@ -100,7 +90,6 @@ input[type="radio"].visually-hidden {
 .main-header {
   padding-top: 49px;
   width: 100%;
-
   background-color: #eeeeee;
 }
 
@@ -130,7 +119,6 @@ input[type="radio"].visually-hidden {
   margin-top: 21px;
   margin-bottom: 0;
   padding-left: 0;
-
   list-style: none;
 }
 
@@ -165,29 +153,23 @@ input[type="radio"].visually-hidden {
 
 .site-navigation a {
   display: block;
-
 }
 
 .cart-link {
   position: relative;
-
   margin-top: 21px;
   margin-left: auto;
   padding-left: 41px;
-
   text-align: right;
 }
 
 .cart-link::before {
   content: "";
-
   position: absolute;
   top: 12px;
   left: 0px;
-
   width: 15px;
   height: 15px;
-
   background-image: url("../img/cart-icon.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -199,7 +181,6 @@ input[type="radio"].visually-hidden {
 
 .slider {
   position: relative;
-
   background-color: #eeeeee;
 }
 
@@ -207,14 +188,11 @@ input[type="radio"].visually-hidden {
   position: absolute;
   left: 50%;
   bottom: 96px;
-
   display: flex;
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
-
   transform: translateX(-50%);
-
   list-style: none;
 }
 
@@ -225,27 +203,21 @@ input[type="radio"].visually-hidden {
 
 .slider-controls a {
   position: relative;
-
   display: block;
   width: 18px;
   height: 18px;
-
   background-color: #ffffff;
   border-radius: 50%;
-
   cursor: pointer;
 }
 
 .slider-controls .active-slide::before {
   content: "";
-
   position: absolute;
   left: 5px;
   top: 5px;
-
   width: 8px;
   height: 8px;
-
   border: 2px solid #c1c1c1;
   border-radius: 50%;
 }
@@ -254,7 +226,6 @@ input[type="radio"].visually-hidden {
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
-
   list-style: none;
 }
 
@@ -262,7 +233,6 @@ input[type="radio"].visually-hidden {
   padding-top: 72px;
   padding-bottom: 50px;
   min-height: 424px;
-
   background-repeat: no-repeat;
   background-color: transparent;
 }
@@ -298,11 +268,11 @@ input[type="radio"].visually-hidden {
 
 .slide-title {
   max-width: 520px;
-
   font-size: 55px;
   line-height: 55px;
   color: #000000;
 }
+
 .slide-title b {
   font-weight: 500;
 }
@@ -323,7 +293,6 @@ input[type="radio"].visually-hidden {
 
 .services {
   padding: 80px 0;
-
   border-bottom: 2px solid #eeeeee;
 }
 
@@ -334,7 +303,6 @@ input[type="radio"].visually-hidden {
   margin-bottom: 0;
   padding-left: 0;
   padding-right: 60px;
-
   list-style: none;
 }
 
@@ -348,7 +316,6 @@ input[type="radio"].visually-hidden {
 
 .service-item {
   padding-top: 170px;
-
   background-repeat: no-repeat;
   background-position: 0 0;
 
@@ -356,7 +323,6 @@ input[type="radio"].visually-hidden {
 
 .service-item-web {
   background-image: url("../img/illustration-1.png");
-
 }
 
 .service-item-app {
@@ -372,7 +338,6 @@ input[type="radio"].visually-hidden {
   margin: 0;
   margin-bottom: 16px;
   padding: 0;
-
   font-size: 24px;
   line-height: 30px;
   font-weight: 700;
@@ -398,7 +363,6 @@ input[type="radio"].visually-hidden {
 
 .button-green:active {
   color: rgba(255, 255, 255, 0.3);
-
   background-color: #00aa62;
   box-shadow: inset 0px 3px 0 0 rgba(0, 1, 1, 0.1);
 }
@@ -414,7 +378,6 @@ input[type="radio"].visually-hidden {
 
 .button-yellow:active {
   color:  rgba(255, 255, 255, 0.3);
-
   background-color: #e5a722;
   box-shadow: inset 0px 3px 0 0 rgba(0, 1, 1, 0.1);
 }
@@ -428,60 +391,52 @@ input[type="radio"].visually-hidden {
   padding-bottom: 74px;
 }
 
-.columns {
+.about-parts {
   display: flex;
   justify-content: space-between;
-
 }
 
-.column-left {
+.about-info {
   margin-top: 35px;
   width: 670px;
 }
 
-.about-info p {
+.about-lead,
+.about-text {
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.about-info p + p {
-  margin-top: 31px;
-}
-
 .about-lead {
-  font-size: 45px;
-  line-height: 45px;
-  color: #000000;
+  margin-top: 0;
+  margin-bottom: 31px;
 }
 
 .about-lead b {
+  font-size: 45px;
+  line-height: 45px;
   font-weight: 500;
+  color: #000000;
 }
 
 .features {
   margin-top: 39px;
 }
 
-.features p {
-  margin-top: 0;
+.features-lead {
+  margin-top: 39px;
   margin-bottom: 0;
-}
-
-.features b {
-  text-transform: uppercase;
 }
 
 .features-list {
   margin-top: 24px;
   margin-bottom: 0;
   padding-left: 0;
-
   list-style: none;
 }
 
 .features-list li {
   position: relative;
-
   padding-left: 36px;
 }
 
@@ -491,20 +446,16 @@ input[type="radio"].visually-hidden {
 
 .features-list li::before {
   content: "";
-
   position: absolute;
   top: 12px;
   left: 1px;
-
   width: 25px;
   height: 2px;
-
   background-color: #fb565a;
 }
 
-.features b {
+.features-lead b {
   display: block;
-
   font-size: 16px;
   line-height: 24px;
   font-weight: 700;
@@ -512,20 +463,18 @@ input[type="radio"].visually-hidden {
   text-transform: uppercase;
 }
 
-.advantages {
+.about-advantages {
   width: 360px;
 }
 
 .advantages-table {
   margin-top: 29px;
   width: 100%;
-
   border-collapse: collapse;
 }
 
 .advantages-table caption {
   margin-bottom: 42px;
-
   font-size: 16px;
   line-height: 24px;
   font-weight: 700;
@@ -559,13 +508,13 @@ input[type="radio"].visually-hidden {
 
 .advantages-text td {
   padding-top: 18px;
-
   line-height: 18px;
 }
 
 /*--О нас--*/
 
 /*--Наши клиенты--*/
+
 .clients {
   border-top: 2px solid #eeeeee;
   border-bottom: 2px solid #eeeeee;
@@ -577,14 +526,11 @@ input[type="radio"].visually-hidden {
   align-items: center;
   margin: 0;
   padding: 0;
-
   list-style: none;
-
 }
 
 .clients-list li {
   position: relative;
-
   display: block;
   width: 300px;
   height: 180px;
@@ -607,14 +553,11 @@ input[type="radio"].visually-hidden {
 
 .clients-list li:not(:nth-child(4n))::after {
   content: "";
-
   position: absolute;
   top: 65px;
   right: -1px;
-
   width: 2px;
   height: 52px;
-
   background-color: #eeeeee;
 }
 
@@ -623,7 +566,6 @@ input[type="radio"].visually-hidden {
   align-items: center;
   justify-content: center;
   height: 100%;
-
   opacity: 0.2;
 }
 
@@ -653,59 +595,49 @@ input[type="radio"].visually-hidden {
 .main-footer .container,
 .inner-footer .container {
   position: relative;
-
   display: flex;
 }
 
 .find-us {
   position: relative;
-
   margin: 0;
   padding: 0;
-
-
   background-color: #ffffff;
 }
 
 .map {
   z-index: 2;
-
   display: block;
   margin: 0;
   width: 100%;
   height: 416px;
-
   border: 0;
 }
 
-/*.find-us img {
+.find-us img {
   position: absolute;
   top: 0;
   left: 0;
   z-index: 1;
-
+  display: block;
   margin: 0;
   width: 100%;
   height: 416px;
-}*/
+}
 
 .contacts {
   z-index: 3;
   position: absolute;
-
   top: 54px;
   left: 20px;
-
   padding: 50px 50px 47px;
   width: 319px;
-
   background-color: #ffffff;
 }
 
 .contacts p {
   margin-top: 0;
   margin-bottom: 18px;
-
   line-height: 18px;
   color: #666666;
 }
@@ -718,7 +650,6 @@ input[type="radio"].visually-hidden {
 
 .contacts .studio-name {
   margin-bottom: 24px;
-
   font-size: 18px;
   line-height: 28px;
   font-weight: 700;
@@ -738,7 +669,6 @@ input[type="radio"].visually-hidden {
   margin: 0;
   margin-right: 128px;
   padding: 0;
-
   list-style: none;
 }
 
@@ -752,7 +682,6 @@ input[type="radio"].visually-hidden {
   justify-content: center;
   width: 79px;
   height: 79px;
-
   background-color: #e1e1e1;
   border-radius: 50%
 }
@@ -778,7 +707,6 @@ input[type="radio"].visually-hidden {
 .footer-promo p {
   margin: 0;
   margin-top: 5px;
-
   font-size: 16px;
   line-height: 22px;
   color: #444444;
@@ -786,7 +714,6 @@ input[type="radio"].visually-hidden {
 
 .footer-promo b {
   margin: 0;
-
   font-size: 36px;
   line-height: 36px;
   font-weight: 700;
@@ -796,30 +723,26 @@ input[type="radio"].visually-hidden {
 /*---Подвал---*/
 
 /*---Форма---*/
+
 .contact-us {
   position: fixed;
   top: 50%;
   left: 50%;
   z-index: 4;
-
   display: none;
   padding: 69px 100px 84px 100px;
   width: 960px;
   height: 590px;
-
   color: #000000;
-
   background-color: #ffffff;
   box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
-
-   transform: translate(-480px, -295px);
+  transform: translate(-480px, -295px);
  }
 
 .contact-form {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-
   background-color: #ffffff;
 }
 
@@ -827,12 +750,9 @@ input[type="radio"].visually-hidden {
   position: absolute;
   top: 79px;
   right: 90px;
-
   width: 21px;
   height: 21px;
-
   font-size: 0;
-
   background-color: transparent;
   border: 0;
   outline: none;
@@ -840,7 +760,6 @@ input[type="radio"].visually-hidden {
   background-repeat: no-repeat;
   background-position: 0 0;
   cursor: pointer;
-
   opacity: 0.3;
 }
 
@@ -857,7 +776,6 @@ input[type="radio"].visually-hidden {
 .contact-us h2 {
   margin: 0;
   margin-bottom: 40px;
-
   font-size: 45px;
   line-height: 45px;
   font-weight: 500;
@@ -876,7 +794,6 @@ input[type="radio"].visually-hidden {
 .contact-item label {
   display: block;
   margin-bottom: 10px;
-
   font-size: 16px;
   line-height: 18px;
   font-weight: 700;
@@ -884,19 +801,15 @@ input[type="radio"].visually-hidden {
 }
 
 .contact-item input {
-
   padding: 13px 14px;
   width: 360px;
-
   font-size: 16px;
   line-height: 18px;
   color: #444444;
-
   border: 2px solid #d7dcde;
   border-radius: 3px;
   outline: none;
 }
-
 
 .contact-form input:hover {
   border: 2px solid #b4b9bb;
@@ -904,28 +817,23 @@ input[type="radio"].visually-hidden {
 
 .contact-form input:focus {
   color: #000000;
-
   border: 2px solid #000000;
 }
 
 .contact-form input:invalid {
   color: #e74246;
-
   border: 2px solid #e74246;
 }
 
 .contact-form textarea {
   padding: 12px 13px;
   width: 760px;
-
   font-size: 16px;
   line-height: 18px;
   color: #444444;
-
   border: 2px solid #d7dcde;
   border-radius: 3px;
   outline: none;
-
   resize: none;
 }
 
@@ -935,25 +843,21 @@ input[type="radio"].visually-hidden {
 
 .contact-form textarea:focus {
   color: #000000;
-
   border: 2px solid #000000;
 }
 
 .contact-form textarea:invalid {
   color: #e74246;
-
   border: 2px solid #e74246;
 }
 
 .contact-form button {
   padding-left: 83px;
   padding-right: 85px;
-
 }
 
 .popup-show {
   display: block;
-
   animation: popup-opening 0.6s;
 }
 
@@ -1004,27 +908,23 @@ input[type="radio"].visually-hidden {
   padding: 0;
   padding-top: 71px;
   padding-bottom: 109px;
-
   font-size: 55px;
   line-height: 55px;
   font-weight: 500;
   color: #000000;
   text-align: center;
-
   background-color: #eeeeee;
 }
 
-.inner-container {
+.catalog-page {
   display: flex;
   justify-content: space-between;
-
 }
 
 /*---Фильтр---*/
 
 .filter {
   box-sizing: content-box;
-
   margin-top: 57px;
   width: 260px;
 }
@@ -1034,7 +934,6 @@ input[type="radio"].visually-hidden {
   margin: 0;
   margin-bottom: 51px;
   padding: 0;
-
   border: none;
 }
 
@@ -1044,7 +943,6 @@ input[type="radio"].visually-hidden {
 
 .filter legend {
   margin-bottom: 21px;
-
   font-size: 18px;
   line-height: 18px;
   font-weight: 700;
@@ -1055,9 +953,7 @@ input[type="radio"].visually-hidden {
 .filter ul {
   margin: 0;
   padding: 0;
-
   list-style: none;
-
 }
 
 .filter-option,
@@ -1074,9 +970,7 @@ input[type="radio"].visually-hidden {
 .filter-option label,
 .filter-feature label {
   position: relative;
-
   display: block;
-
   cursor: pointer;
   user-select: none;
 }
@@ -1102,38 +996,27 @@ input[type="radio"].visually-hidden {
 
 .filter-input-checkbox + label::before {
   content: "";
-
   position: absolute;
   left: -35px;
   top: 0;
-
-
   width: 27px;
   height: 23px;
-
   background-image: url("../img/checkbox-off.svg");
   background-position: 0 0;
   background-repeat: no-repeat;
-
   opacity: 0.4;
 }
 
 .filter-input-checkbox:checked + label::before {
   content: "";
-
   position: absolute;
-
   width: 27px;
   height: 23px;
-
   background-image: url("../img/checkbox-on.svg");
   background-position: 0 0;
   background-repeat: no-repeat;
-
   opacity: 0.4;
 }
-
-
 
 .filter-input-checkbox:hover + label::before,
 .filter-input-checkbox:focus + label::before {
@@ -1146,34 +1029,25 @@ input[type="radio"].visually-hidden {
 
 .filter-input-radio + label::before {
   content: "";
-
   position: absolute;
   left: -35px;
   top: -3px;
-
-
   width: 25px;
   height: 25px;
-
   background-image: url("../img/radio-off.svg");
   background-position: 0 0;
   background-repeat: no-repeat;
-
   opacity: 0.4;
 }
 
 .filter-input-radio:checked + label::before {
   content: "";
-
   position: absolute;
-
   width: 25px;
   height: 25px;
-
   background-image: url("../img/radio-on.svg");
   background-position: 0 0;
   background-repeat: no-repeat;
-
   opacity: 0.4;
 }
 
@@ -1191,18 +1065,15 @@ input[type="radio"].visually-hidden {
   margin: 0;
   padding: 0;
   width: 260px;
-
   border: none;
 }
 
 .range-filter {
   width: 260px;
-
 }
 
 .filter-item legend {
   margin-bottom: 50px;
-
   font-size: 18px;
   line-height: 24px;
   font-weight: 700;
@@ -1211,27 +1082,23 @@ input[type="radio"].visually-hidden {
 
 .range-controls {
   position: relative;
-
   margin-bottom: 15px;
   padding-top: 39px;
   padding-right: 20px;
   padding-left: 20px;
   height: 41px;
-
   background-color: #f1f1f1;
   border-radius: 5px;
 }
 
 .range-controls .scale {
   height: 2px;
-
   background: #d7dcde;
 }
 
 .range-controls .bar {
   width: 70%;
   height: 2px;
-
   background: #00ca74;
 }
 
@@ -1239,11 +1106,9 @@ input[type="radio"].visually-hidden {
   position: absolute;
   top: 31px;
   left: 0;
-
   padding: 0;
   width: 4px;
   height: 4px;
-
   border: 8px solid #ffffff;
   border-radius: 50%;
   background-color: #ababab;
@@ -1267,20 +1132,18 @@ input[type="radio"].visually-hidden {
 .price-controls label {
   display: inline-block;
   width: 50%;
-
   font-size: 16px;
   text-transform: uppercase;
+  vertical-align: baseline;
 }
 
 .price-controls input {
   margin-left: 9px;
   padding: 10px 10px;
   width: 60px;
-
   color: #283136;
   text-align: center;
   vertical-align: baseline;
-
   background: #f1f1f1;
   border: none;
   border-radius: 5px;
@@ -1291,22 +1154,19 @@ input[type="radio"].visually-hidden {
 }
 
 
-.filter-button {
+.filter .button {
   padding: 15px 89px;
-
   color: #000000;
-
   background-color: #eeeeee;
 }
 
-.filter-button:hover,
-.filter-button:focus {
+.filter .button:hover,
+.filter .button:focus {
   background-color: #dfdfdf;
 }
 
-.filter-button:active {
+.filter .button:active {
   color: rgba(0, 0, 0, 0.3);
-
   background-color: #d5d5d5;
   box-shadow: inset 0px 3px 0 0 rgba(0, 1, 1, 0.1);
 }
@@ -1314,16 +1174,15 @@ input[type="radio"].visually-hidden {
 /*---Фильтр---*/
 
 /*---Сортировка---*/
+
 .catalog-sorting {
   display: flex;
   align-items: center;
   margin-bottom : 53px;
 }
 
-
 .sorting-title {
   margin-right: auto;
-
   font-size: 18px;
   line-height: 18px;
   font-weight: 700;
@@ -1338,7 +1197,6 @@ input[type="radio"].visually-hidden {
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
-
   list-style: none;
 }
 
@@ -1346,13 +1204,11 @@ input[type="radio"].visually-hidden {
   margin-right: 48px;
 }
 
-
 .sorting-type a {
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
   color: #000000;
-
   opacity: 0.3;
 }
 
@@ -1379,7 +1235,6 @@ input[type="radio"].visually-hidden {
 
 .sorting-updown svg {
   display: block;
-
   opacity: 0.2;
 }
 
@@ -1400,7 +1255,7 @@ input[type="radio"].visually-hidden {
 
 /*---Каталог---*/
 
-.right-column {
+.catalog-content {
   margin-top: 55px;
   width: 760px;
 }
@@ -1412,43 +1267,36 @@ input[type="radio"].visually-hidden {
   margin:0;
   margin-bottom: 27px;
   padding: 0;
-
   list-style: none;
 }
 
 .catalog-list li {
   width: 360px;
   margin-bottom: 33px;
-
   background-color: #e9e9e9;
   border-radius: 3px 3px 0 0;
-
 }
 
 .catalog-item {
   position: relative;
   overflow: hidden;
-
   padding-top: 40px;
-
   border: 1px solid #e5e5e5;
   border-radius: 3px 3px 0 0;
 }
 
 .catalog-item:hover {
   background-color: #4d4d4d;
+  box-shadow: 0 6px 15px rgba(0,0,0,0.25);
 }
 
 .catalog-item::before {
   content: "";
-
   position: absolute;
   top: 13px;
   left: 16px;
-
   width: 14px;
   height: 14px;
-
   background-color: #ffffff;
   border-radius: 50%;
   box-shadow: 23px 0 0 #ffffff, 46px 0 0 #ffffff;
@@ -1457,22 +1305,17 @@ input[type="radio"].visually-hidden {
 .catalog-item img {
   width: 360px;
   height: 574px;
-
   vertical-align: middle;
 }
 
-
 .catalog-item-hidden {
   position: absolute;
-  top:385px;
-
+  top: 385px;
   padding-top: 28px;
   padding-bottom: 43px;
   width: 360px;
   height: 231px;
-
   text-align: center;
-
   background-color: #eeeeee;
   opacity: 0;
 }
@@ -1491,7 +1334,6 @@ input[type="radio"].visually-hidden {
   padding-right: 61px;
 }
 
-
 .catalog-item:hover .catalog-item-hidden {
   opacity: 1;
 }
@@ -1500,7 +1342,7 @@ input[type="radio"].visually-hidden {
   margin-top: 30px;
   padding-right: 60px;
   padding-left: 60px;
-  }
+}
 
 .item-title a {
   font-size: 18px;
@@ -1512,22 +1354,18 @@ input[type="radio"].visually-hidden {
 
 .item-title {
   overflow: hidden;
-
   margin-top: 0;
   margin-bottom: 14px;
-
   text-align: center;
 }
 
 .catalog-item p {
   overflow: hidden;
-
   margin: 0;
-
+  max-height: 36px;
   font-size: 16px;
   line-height: 18px;
   font-weight: 400;
-
   color: #666666;
   text-align: center;
 }
@@ -1541,18 +1379,24 @@ input[type="radio"].visually-hidden {
   justify-content: flex-start;
   margin: 0;
   padding: 0;
-
   list-style: none;
 }
 
 .pagination-item {
-  margin-right: 11px;
-  width: 50px;
-  height: 50px;
+  margin-right: 10px;
+}
 
+.pagination-item a {
+  display: block;
+  margin: 0;
+  padding: 15px 20px;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 500;
+  color: #000000;
   text-align: center;
   vertical-align: middle;
-
+  text-transform: uppercase;
   background-color: #eeeeee;
   border: 1px solid #eeeeee;
   border-radius: 3px;
@@ -1562,19 +1406,8 @@ input[type="radio"].visually-hidden {
   width: 260px;
 }
 
-.pagination-item a {
-  display: block;
-  margin: 0;
-  padding: 16px 21px;
 
-  font-size: 16px;
-  line-height: 18px;
-  font-weight: 500;
-  color: #000000;
-  text-transform: uppercase;
-}
-
-.pagination-item:last-of-type {
+.pagination-item a:last-of-type {
   margin-right: 0;
 }
 
@@ -1585,16 +1418,12 @@ input[type="radio"].visually-hidden {
 
 .pagination-list a:active {
   color: rgba(0, 0, 0, 0.3);
-
   background-color: #d5d5d5;
   box-shadow: inset 0px 3px 0 0 rgba(0, 1, 1, 0.1);
-
 }
 
-
 .current-page a {
-  padding: 13px 15px;
-
+  padding: 13px 18px;
   background-color: #ffffff;
   border: 3px solid #dbdbdb;
 }
