--- a/css/style.css
+++ b/css/style.css
@@ -788,7 +788,7 @@ input[type="radio"].visually-hidden {
 }
 
 .contact-item:last-of-type {
-  margin-bottom: 40px;
+  margin-bottom: 46px;
 }
 
 .contact-item label {
@@ -831,6 +831,7 @@ input[type="radio"].visually-hidden {
   font-size: 16px;
   line-height: 18px;
   color: #444444;
+  vertical-align:top;
   border: 2px solid #d7dcde;
   border-radius: 3px;
   outline: none;
