--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,7 @@ input[type="radio"].visually-hidden {
 }
 
 .slider-item {
+  display: none;
   padding-top: 72px;
   padding-bottom: 50px;
   min-height: 424px;
@@ -252,9 +253,8 @@ input[type="radio"].visually-hidden {
   background-position: right bottom;
 }
 
-.slide-2,
-.slide-3 {
-  display: none;
+.active-slide {
+  display: block;
 }
 
 .slider-item p {
